--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,5 +1,8 @@
+.contact__list {
+  margin-left: 20px;
+}
 .contact {
-  margin-bottom: 4px;
+  margin-bottom: 8px;
   line-height: 1.4em;
 }
 .contact:last-child {
@@ -11,13 +14,4 @@
 }
 .number {
   margin-right: 35px;
-}
-.button__del {
-  display: block;
-
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 3px;
-  border-radius: 4px;
 }
